[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.42.0"
serde = "1.0.215"
toml = "0.8"
hyper = "1.5"
cargo-manifest = "0.17.0"
serde_json = { version = "1.0.134" }
yaml-rust2 = "0.9"