[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros", "multipart"] }
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.42.0"
serde = "1.0.217"
toml = "0.8"
hyper = "1.5.2"
cargo-manifest = "0.17.0"
serde_json = { version = "1.0.134" }
serde_yml = "0.0.12"
leaky-bucket = "1.1.2"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "macros", "chrono", "uuid", "postgres"] }
uuid = "1.11.0"
chrono = "0.4.39"
rand = "0.8.5"
jsonwebtoken = "9.3.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
once_cell = "1.20.2"
tower-http = {version = "0.6.2", features = ["fs"] }
html-escape = "0.2.13"
